# projectm-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build_bindgen.rs  emscripten.sh  wrapper.h
.github/workflows/: build_emscripten.yml  build_linux.yml  build_osx.yml  build_windows.yml  publish_crate.yml  publish_sys_crate.yml
docs/examples/: sdl.rs
examples/: sdl.rs
projectm-sys/: Cargo.toml  README.md  build.rs  build_bindgen.rs
projectm-sys/.cargo/: config.toml  linker-emscripten
projectm-sys/.github/workflows/: build_emscripten.yml  build_linux.yml  build_osx.yml  build_windows.yml  publish_crate.yml
projectm-sys/bindgen/: default.h
projectm_sys/: Cargo.toml  build.rs
projectm_sys/.cargo/: config.toml
projectm_sys/.github/workflows/: build_emscripten.yml  build_linux.yml
projectm_sys/bindgen/: playlist.h
src/: core.rs  lib.rs  playlist.rs
tests/: core.rs  playlist.rs
