[package]
name = "projectm"
version = "2.0.1"
edition = "2021"
rust-version = "1.65"
authors = ["AnomieVision <anomievision@gmail.com.com>", "Mischa Spiegelmock <me@mish.dev>"]
description = "Bindings for ProjectM"
license = "	LGPL-3.0-or-later"
repository = "https://github.com/projectM-visualizer/projectm-rs" #https://github.com/anomievision/projectm-rs
keywords = ["visualization", "audio", "sound", "projectm"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
readme = "README.md"

[dependencies]
libc = "0.2"
#projectm-sys = { path = "projectm-sys", version = "1.0.9-rc.1", features = ["playlist"] }
projectm-sys = { version = "1.0.10" }
rand = "0.8"

[features]
default = ["playlist"]
playlist = ["projectm-sys/playlist"]