[package]
name = "projectm-sys"
version = "1.2.2"
edition = "2021"
rust-version = "1.65"
authors = ["AnomieVision <anomievision@gmail.com.com>", "Mischa Spiegelmock <me@mish.dev>"]
description = "Bindings for ProjectM"
license = "LGPL-3.0-or-later"
repository = "https://github.com/projectM-visualizer/projectm-rs"
documentation = "https://docs.rs/projectm-sys/latest"
keywords = ["visualization", "audio", "sound", "projectm"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
readme = "README.md"
links = "projectm"

include = [
    "src/**",
    "Cargo.toml",
    "build.rs",
    "README.md",
    "LICENSE",
    "build_bindgen.rs",
    "libprojectM/CMakeLists.txt",
    "libprojectM/src/**",
    "libprojectM/include/**",
    "libprojectM/presets/CMakeLists.txt",
    "libprojectM/cmake/**",
    "libprojectM/vendor/**",
    "libprojectM/vendor/projectm-eval/**",
    "libprojectM/vendor/**/CMakeLists.txt",
    "libprojectM/vendor/**/cmake/**",
    "libprojectM/**/*.cmake",
    "libprojectM/**/*.h",
    "libprojectM/**/*.hpp",
    "libprojectM/config*",
    "libprojectM/vcpkg*",
    "bindgen/**",
]

[dependencies]

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.70.1"
lazy_static = "1.4.0"

[features]
default = ["playlist"]
playlist = []
static = []

