[package]
name = "projectm-sys"
version = "1.0.7"
edition = "2021"
rust-version = "1.65"
authors = ["AnomieVision <anomievision@gmail.com.com>"]
description = "Bindings for ProjectM"
license = "	LGPL-3.0-or-later"
repository = "https://github.com/anomievision/projectm-sys"
documentation = "https://docs.rs/projectm-sys/latest"
keywords = ["visualization", "audio", "sound",  "projectm"]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
readme = "README.md"
links = "projectm"

[dependencies]

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.64.0"
lazy_static = "1.4.0"

[features]
default = ["playlist"]
playlist = []